After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721411 - Missing mnemonics for buttons in trash bar
Missing mnemonics for buttons in trash bar
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Trash
3.15.x
Other Linux
: Normal minor
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-01-03 17:21 UTC by André Klapper
Modified: 2016-03-01 15:35 UTC
See Also:
GNOME target: ---
GNOME version: 3.15/3.16


Attachments
tried to fix missing mnemonics (984 bytes, patch)
2014-02-16 20:40 UTC, Bogdan Petcu
none Details | Review
Added missing mnemonics for trashbar buttons (1.23 KB, patch)
2015-02-27 08:03 UTC, Muhammet Kara
none Details | Review
nautilus-file: explain why is not possible to rename (1.28 KB, patch)
2015-02-27 11:02 UTC, Carlos Soriano
committed Details | Review

Description André Klapper 2014-01-03 17:21:25 UTC
Both strings are missing mnemonics:

#: ../src/nautilus-trash-bar.c:203
msgid "Restore"

#. Translators: "Empty" is an action (for the trash) , not a state
#: ../src/nautilus-trash-bar.c:210
msgid "Empty"
Comment 1 Bogdan Petcu 2014-02-16 20:40:28 UTC
Created attachment 269327 [details] [review]
tried to fix missing mnemonics
Comment 2 André Klapper 2014-02-17 10:33:59 UTC
(In reply to comment #1)
> Created an attachment (id=269327) [details] [review]
> tried to fix missing mnemonics

Did you test that patch? 
I don't see any mnemonic additions here, only string changes.
Comment 3 Cosimo Cecchi 2014-02-17 20:19:07 UTC
Comment on attachment 269327 [details] [review]
tried to fix missing mnemonics

Yeah, this doesn't seem to address the missing mnemonics.
Comment 4 Bogdan Petcu 2014-02-17 21:41:09 UTC
Sorry, misunderstood mnemonics. I'm a beginner. Should I use gtk_widget_add_mnemonic_label ?
Comment 5 Cosimo Cecchi 2014-04-10 17:58:44 UTC
You should be able to just use the underscore notation to add a mnemonic, no? Like "_Restore" or "E_mpty Trash".
Comment 6 Muhammet Kara 2015-02-27 08:03:37 UTC
Created attachment 298064 [details] [review]
Added missing mnemonics for trashbar buttons

Added missing mnemonics for the 'Restore' (_R) and 'Empty' (_E) buttons at the top of the trash bar.
Comment 7 Carlos Soriano 2015-02-27 09:25:55 UTC
Thanks for the patch! =)
Comment 8 Carlos Soriano 2015-02-27 11:02:21 UTC
Created attachment 298072 [details] [review]
nautilus-file: explain why is not possible to rename

desktop files are managed as a special case, and changes on the file
name also affect the contents. But when the content are not a desktop
valid format, it generates an error.

The only thing that comes to my mind to keep maintaining this special
handling of desktop files and also not being in a inconsistent state is
to just explain better why we failed to rename.
Comment 9 Carlos Soriano 2015-02-27 11:04:37 UTC
(In reply to Carlos Soriano from comment #8)
> Created attachment 298072 [details] [review] [review]
> nautilus-file: explain why is not possible to rename
> 
> desktop files are managed as a special case, and changes on the file
> name also affect the contents. But when the content are not a desktop
> valid format, it generates an error.
> 
> The only thing that comes to my mind to keep maintaining this special
> handling of desktop files and also not being in a inconsistent state is
> to just explain better why we failed to rename.
whops, wrong number
Comment 10 Carlos Soriano 2016-03-01 15:35:36 UTC
Comment on attachment 298072 [details] [review]
nautilus-file: explain why is not possible to rename

Attachment 298072 [details] pushed as 2b7d17a - nautilus-file: explain why is not possible to rename