trash-bar: added missing mnemonics

Added missing mnemonics for the 'Restore' and 'Empty' buttons
at the top of the trash bar.

https://bugzilla.gnome.org/show_bug.cgi?id=721411