src/nautilus-trash-bar.c
@@ -199,14 +199,14 @@ nautilus_trash_bar_init (NautilusTrashBar *bar)
 	gtk_container_add (GTK_CONTAINER (content_area), label);
 
 	w = gtk_info_bar_add_button (GTK_INFO_BAR (bar),
-				     _("Restore"),
+				     _("_Restore"),
 				     TRASH_BAR_RESPONSE_RESTORE);
 	gtk_widget_set_tooltip_text (w,
 				     _("Restore selected items to their original position"));
 
 	w = gtk_info_bar_add_button (GTK_INFO_BAR (bar),
 	/* Translators: "Empty" is an action (for the trash) , not a state */
-				     _("Empty"),
+				     _("_Empty"),
 				     TRASH_BAR_RESPONSE_EMPTY);
 	gtk_widget_set_tooltip_text (w,
 				     _("Delete all items in the Trash"));
